# VAT

./: CMakeLists.txt  README.md
vat/: CMakeLists.txt  VideoAnalyse.cpp  VideoAnalyse.h
vat/include/common/: FfmpegCommon.h  common.h
vat/include/ffmpeg/: FFMpegDemuxer.h
vat/src/ffmpeg/: FFMpegDemuxer.cpp
